tests/bad/typcheck2.tig
let
function nil_r_not_record_nok (x:string, y:int, z:int): int =
    if x = nil then y else z
in nil_r_not_record_nok("toto", 0, 0)
end
